# csv_processor

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
data/: sample1.csv  sample2.csv
processors/: base.py
requirements/: requirements_dev.txt
src/csv_processor/: cli.py  exceptions.py  models.py  validators.py
src/csv_processor/processors/: __init__.py  average_rating.py
src/scripts/: run.py
tests/: conftest.py  test_cli.py  test_models.py  test_validators.py
tests/test_processors/: test_average_rating.py
